# langchain-rag-tutorial

./: .env.example  .gitignore  ARTICLE.md  ARTICLE.md.bak  Makefile  PROJECT_UPDATE.md  README.md  TODO.md  app.py  main.py  pyproject.toml  run_tests.bat  run_tests.sh
data/: knowledge_base.txt  story.txt
tests/: conftest.py  test_app.py  test_app_integration.py  test_main.py
