[project]
name = "langchain-rag-tutorial"
version = "0.1.0"
description = "LangChain RAG 教程 - 个人知识库问答"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-text-splitters",
    "faiss-cpu",
    "ollama",
    "rank-bm25",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
