[project]
name = "langchain-rag-tutorial"
version = "0.1.0"
description = "LangChain RAG 教程 - 个人知识库问答"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu",
    "jieba",
    "langchain",
    "langchain-community",
    "langchain-deepseek",
    "langchain-ollama",
    "langchain-text-splitters",
    "python-dotenv",
    "rank-bm25",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
